--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
           <a href="https://github.com/teslimat/" target="_blank"
             >Teslimat Adeyemi</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          and is
+          <a href="https://github.com/Teslimat/my-weatherapp" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://warm-malabi-8e5b2d.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
