--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             on GitHub</a
           >
           and
-          <a href="https://warm-malabi-8e5b2d.netlify.app/" target="_blank"
+          <a href="https://my-shecodes-app-project.netlify.app/" target="_blank"
             >hosted on Netlify</a
           >
         </p>
